Fixed panel two button to not take extra space

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -66,6 +66,10 @@
     margin-right: 75px;
 }
 
+.PanelTwoButton {
+    display: flex;
+}
+
 .PanelThree {
     display: flex;
     height: 500px;
